[package]
name = "net-http"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]
std = ["common_std", "thirdparty_std"]
tstd = ["common_tstd", "thirdparty_tstd"]
common_std = ["net/std", "bytes/std", "glog/std", "crypto/std", "base/std"]
common_tstd = ["sgxlib/tstd", "net/tstd", "bytes/tstd",  "glog/tstd", "crypto/tstd", "base/tstd"]
thirdparty_std = ["gsrs/std", "rustls/std", "http_req/std", "rand_websocket/std", "base64/std", "serde/std", "serde/std"]
thirdparty_tstd = ["gsrs/tstd", "rustls/tstd", "http_req/tstd", "rand_websocket", "base64/tstd", "serde/tstd", "serde/tstd"]

[dependencies]
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
net = { git = "https://github.com/automata-network/net-rs", default-features = false }
bytes = { git = "https://github.com/automata-network/bytes-rs", default-features = false }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }

gsrs = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
rustls = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
http_req = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
base64 = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde_json = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }

httparse = { version = "1.3.5", default-features = false }
embedded-websocket = { git = "https://github.com/automata-network/embedded-websocket", branch = "v0.6.0", default-features = false }
rand_websocket = { optional = true, version = "0.8.3", package = "rand", default-features = false, features = ["std_rng"] }
rand_core = { version = "0.6" }
heapless = "0.5"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_backtrace_sys = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_build_helper = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_demangle = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_libc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_rand = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_tcrypto = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_ucrypto = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_tprotected_fs = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_trts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_tstd = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_types = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_unwind = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_urts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
